<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_one"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/avatar1Description"
            app:srcCompat="@mipmap/boy" />

        <ImageView
            android:id="@+id/iv_two"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/avatar2Description"
            app:srcCompat="@mipmap/girl" />

        <ImageView
            android:id="@+id/iv_three"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/avatar3Description"
            app:srcCompat="@mipmap/man" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_four"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/avatar4Description"
            app:srcCompat="@mipmap/boy1" />

        <ImageView
            android:id="@+id/iv_five"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/avatar5Description"
            app:srcCompat="@mipmap/girl1" />

        <ImageView
            android:id="@+id/iv_six"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/avatar6Description"
            app:srcCompat="@mipmap/boy2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_seven"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/avatar7Description"
            app:srcCompat="@mipmap/girl2" />

        <ImageView
            android:id="@+id/iv_eight"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/avatar8Description"
            app:srcCompat="@mipmap/girl3" />

        <ImageView
            android:id="@+id/iv_nine"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/avatar9Description"
            app:srcCompat="@mipmap/girl4" />
    </LinearLayout>

</LinearLayout>