<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RelativeFragment">


    <ImageView
        android:id="@+id/iv_one"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="34dp"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="91dp"
        android:contentDescription="@string/avatar1Description"
        android:src="@mipmap/boy" />

    <ImageView
        android:id="@+id/iv_two"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="93dp"
        android:layout_marginEnd="151dp"
        android:layout_marginRight="151dp"
        android:contentDescription="@string/avatar2Description"
        android:src="@mipmap/girl" />

    <ImageView
        android:id="@+id/iv_three"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="93dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:contentDescription="@string/avatar3Description"
        android:src="@mipmap/man" />

    <ImageView
        android:id="@+id/iv_four"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/iv_one"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:contentDescription="@string/avatar4Description"
        android:src="@mipmap/boy1" />

    <ImageView
        android:id="@+id/iv_five"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/iv_two"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="136dp"
        android:layout_marginLeft="136dp"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/avatar5Description"
        android:src="@mipmap/girl1" />

    <ImageView
        android:id="@+id/iv_six"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/iv_two"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:contentDescription="@string/avatar6Description"
        android:src="@mipmap/boy2" />

    <ImageView
        android:id="@+id/iv_seven"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginBottom="118dp"
        android:contentDescription="@string/avatar7Description"
        android:src="@mipmap/girl2" />

    <ImageView
        android:id="@+id/iv_eight"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="118dp"
        android:layout_toEndOf="@+id/iv_four"
        android:contentDescription="@string/avatar8Description"
        android:src="@mipmap/girl3" />

    <ImageView
        android:id="@+id/iv_nine"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="51dp"
        android:layout_marginRight="51dp"
        android:layout_marginBottom="119dp"
        android:contentDescription="@string/avatar9Description"
        android:src="@mipmap/girl4" />
</RelativeLayout>